--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Upload PDF</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./index.css">
+
 </head>
 <body>
   <div class="upload-container">
     <h2>Upload a PDF File</h2>
-    <form enctype="multipart/form-data" action="http://localhost:8080/v1/upload" method="post">
-      <input type="file" name="pdf" accept="application/pdf" required><br>
-      <input type="submit" value="Upload">
-    </form>
+
+    <div>
+        <input type="file" id="pdfFile" accept="application/pdf" />
+        <br>
+        <button id="uploadBtn">Upload PDF</button>
+        <button id="clearBtn">Clear Response</button>
+        <button id="unselectBtn">Unselect File</button>
+    </div>
+    <div id="response" class="response-box">
+    Ready to upload... Select a PDF file and click Upload.
+    </div>
   </div>
+ <script src="./script.js", type="text/javascript"></script>
 </body>
 </html>
