--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,11 +12,13 @@
     <h2>Upload a PDF File</h2>
 
     <div>
+        <input type="text" id="job_desc" placeholder="Job Description" />
         <input type="file" id="pdfFile" accept="application/pdf" />
         <br>
         <button id="uploadBtn">Upload PDF</button>
         <button id="clearBtn">Clear Response</button>
         <button id="unselectBtn">Unselect File</button>
+        <br>
     </div>
     <div id="response" class="response-box">
     Ready to upload... Select a PDF file and click Upload.
